// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildSendUpdateEmail (Phase 34 Plan 04) > matches existing send-update.ts snapshot when called with the fixture input 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><title>Kimball Residence — Weekly Update</title></head>
<body style="margin:0;padding:0;background-color:#F5F1EB;">
  <div style="background: #F5F1EB; padding: 2rem 1rem;">
    <div style="max-width: 580px; margin: 0 auto; background: #FDFAF6; border: 0.5px solid #E8E2D9; border-radius: 4px; font-family: Georgia, 'Times New Roman', serif; color: #2C2A26;">

      <div style="padding: 2.5rem 2.5rem 0; text-align: center; border-bottom: 0.5px solid #E8E2D9; padding-bottom: 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.18em; color: #9A8F82; margin: 0 0 0.35rem; text-transform: uppercase;">La Sprezzatura</p>
      </div>

      <div style="padding: 2rem 2.5rem 0;">
        <h1 style="font-size: 22px; font-weight: 400; color: #2C2A26; margin: 0 0 0.25rem; letter-spacing: -0.01em;">Project Update</h1>
        <p style="font-size: 13px; color: #9A8F82; margin: 0 0 1.75rem; font-family: Arial, sans-serif; letter-spacing: 0.04em;">Kimball Residence &nbsp;·&nbsp; April 27, 2026</p>

        <p style="font-size: 15px; line-height: 1.75; color: #4A4540; margin: 0 0 0.85rem;">Hi there,</p>
        
      </div>

      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Milestones</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="font-family: Arial, sans-serif; font-size: 11px; color: #7D9E6E;">&#10003;</span>
              <span style="font-size: 14px; color: #9A8F82; text-decoration: line-through;">Design intake</span>
            </div>
            <span style="font-size: 13px; color: #B8AFA4; font-family: Arial, sans-serif;">Feb 28</span>
          </div>
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="width: 7px; height: 7px; border-radius: 50%; background: #D4C9BC; display: inline-block; flex-shrink: 0;"></span>
              <span style="font-size: 14px; color: #2C2A26;">Construction kickoff</span>
            </div>
            <span style="font-size: 13px; color: #4A4540; font-family: Arial, sans-serif;">Apr 14</span>
          </div>
      </div>
      
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Procurement</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <table style="width: 100%; border-collapse: collapse; font-family: Arial, sans-serif;">
          <thead>
            <tr style="border-bottom: 0.5px solid #D9D3CA;">
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; width: 50%;">Item</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: center;">Status</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: right;">ETA</td>
            </tr>
          </thead>
          <tbody>
          <tr style="border-bottom: 0.5px solid #EDE8E2;">
            <td style="font-size: 13px; color: #2C2A26; padding: 0.65rem 0;">Sofa</td>
            <td style="font-size: 12px; color: #D4A574; text-align: center; padding: 0.65rem 0;">Ordered</td>
            <td style="font-size: 12px; color: #9A8F82; text-align: right; padding: 0.65rem 0;">Apr 30</td>
          </tr></tbody>
        </table>
      </div>
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Awaiting Your Review</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; font-size: 14px; color: #2C2A26;">&#9675; Proposal</div>
      </div>

      <div style="padding: 0 2.5rem 2.5rem;">
        <p style="font-size: 15px; color: #2C2A26; margin: 0 0 0.2rem;">Elizabeth</p>
        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #9A8F82; margin: 0 0 1.75rem;">La Sprezzatura</p>

        <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 0.5px solid #EDE8E2;">
          <a href="https://lasprezz.com/portal/dashboard" style="display: inline-block; background: #8B6E5A; color: #FAF7F3; font-family: Arial, sans-serif; font-size: 11px; letter-spacing: 0.14em; text-transform: uppercase; text-decoration: none; padding: 0.85rem 2rem; border-radius: 2px;">Open Your Project Portal →</a>
        </div>

        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #6B6560; text-align: center; margin: 1.25rem 0 0; line-height: 1.6;">
          Questions or feedback? <a href="mailto:liz@lasprezz.com" style="color: #8B6E5A; text-decoration: underline;">Email Elizabeth</a>.
        </p>
      </div>

      <div style="padding: 1rem 2.5rem; border-top: 0.5px solid #EDE8E2; text-align: center;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0; letter-spacing: 0.06em;">La Sprezzatura · Darien, CT</p>
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0.5rem 0 0; letter-spacing: 0.06em;">Sent via Sprezza Hub</p>
      </div>

    </div>
  </div>
</body>
</html>"
`;

exports[`buildSendUpdateEmail (Phase 34 Plan 04) > snapshot: renders with non-empty personalNote 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><title>Kimball Residence — Weekly Update</title></head>
<body style="margin:0;padding:0;background-color:#F5F1EB;">
  <div style="background: #F5F1EB; padding: 2rem 1rem;">
    <div style="max-width: 580px; margin: 0 auto; background: #FDFAF6; border: 0.5px solid #E8E2D9; border-radius: 4px; font-family: Georgia, 'Times New Roman', serif; color: #2C2A26;">

      <div style="padding: 2.5rem 2.5rem 0; text-align: center; border-bottom: 0.5px solid #E8E2D9; padding-bottom: 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.18em; color: #9A8F82; margin: 0 0 0.35rem; text-transform: uppercase;">La Sprezzatura</p>
      </div>

      <div style="padding: 2rem 2.5rem 0;">
        <h1 style="font-size: 22px; font-weight: 400; color: #2C2A26; margin: 0 0 0.25rem; letter-spacing: -0.01em;">Project Update</h1>
        <p style="font-size: 13px; color: #9A8F82; margin: 0 0 1.75rem; font-family: Arial, sans-serif; letter-spacing: 0.04em;">Kimball Residence &nbsp;·&nbsp; April 27, 2026</p>

        <p style="font-size: 15px; line-height: 1.75; color: #4A4540; margin: 0 0 0.85rem;">Hi there,</p>
        <p style="font-size: 15px; line-height: 1.75; color: #4A4540; margin: 0 0 0.85rem;">Loving the new fabric samples.</p>
      </div>

      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Milestones</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="font-family: Arial, sans-serif; font-size: 11px; color: #7D9E6E;">&#10003;</span>
              <span style="font-size: 14px; color: #9A8F82; text-decoration: line-through;">Design intake</span>
            </div>
            <span style="font-size: 13px; color: #B8AFA4; font-family: Arial, sans-serif;">Feb 28</span>
          </div>
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="width: 7px; height: 7px; border-radius: 50%; background: #D4C9BC; display: inline-block; flex-shrink: 0;"></span>
              <span style="font-size: 14px; color: #2C2A26;">Construction kickoff</span>
            </div>
            <span style="font-size: 13px; color: #4A4540; font-family: Arial, sans-serif;">Apr 14</span>
          </div>
      </div>
      
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Procurement</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <table style="width: 100%; border-collapse: collapse; font-family: Arial, sans-serif;">
          <thead>
            <tr style="border-bottom: 0.5px solid #D9D3CA;">
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; width: 50%;">Item</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: center;">Status</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: right;">ETA</td>
            </tr>
          </thead>
          <tbody>
          <tr style="border-bottom: 0.5px solid #EDE8E2;">
            <td style="font-size: 13px; color: #2C2A26; padding: 0.65rem 0;">Sofa</td>
            <td style="font-size: 12px; color: #D4A574; text-align: center; padding: 0.65rem 0;">Ordered</td>
            <td style="font-size: 12px; color: #9A8F82; text-align: right; padding: 0.65rem 0;">Apr 30</td>
          </tr></tbody>
        </table>
      </div>
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Awaiting Your Review</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; font-size: 14px; color: #2C2A26;">&#9675; Proposal</div>
      </div>

      <div style="padding: 0 2.5rem 2.5rem;">
        <p style="font-size: 15px; color: #2C2A26; margin: 0 0 0.2rem;">Elizabeth</p>
        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #9A8F82; margin: 0 0 1.75rem;">La Sprezzatura</p>

        <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 0.5px solid #EDE8E2;">
          <a href="https://lasprezz.com/portal/dashboard" style="display: inline-block; background: #8B6E5A; color: #FAF7F3; font-family: Arial, sans-serif; font-size: 11px; letter-spacing: 0.14em; text-transform: uppercase; text-decoration: none; padding: 0.85rem 2rem; border-radius: 2px;">Open Your Project Portal →</a>
        </div>

        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #6B6560; text-align: center; margin: 1.25rem 0 0; line-height: 1.6;">
          Questions or feedback? <a href="mailto:liz@lasprezz.com" style="color: #8B6E5A; text-decoration: underline;">Email Elizabeth</a>.
        </p>
      </div>

      <div style="padding: 1rem 2.5rem; border-top: 0.5px solid #EDE8E2; text-align: center;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0; letter-spacing: 0.06em;">La Sprezzatura · Darien, CT</p>
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0.5rem 0 0; letter-spacing: 0.06em;">Sent via Sprezza Hub</p>
      </div>

    </div>
  </div>
</body>
</html>"
`;

exports[`buildSendUpdateEmail (Phase 34 Plan 04) > snapshot: renders without artifacts section (showArtifacts: false, pendingArtifacts: []) 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><title>Kimball Residence — Weekly Update</title></head>
<body style="margin:0;padding:0;background-color:#F5F1EB;">
  <div style="background: #F5F1EB; padding: 2rem 1rem;">
    <div style="max-width: 580px; margin: 0 auto; background: #FDFAF6; border: 0.5px solid #E8E2D9; border-radius: 4px; font-family: Georgia, 'Times New Roman', serif; color: #2C2A26;">

      <div style="padding: 2.5rem 2.5rem 0; text-align: center; border-bottom: 0.5px solid #E8E2D9; padding-bottom: 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.18em; color: #9A8F82; margin: 0 0 0.35rem; text-transform: uppercase;">La Sprezzatura</p>
      </div>

      <div style="padding: 2rem 2.5rem 0;">
        <h1 style="font-size: 22px; font-weight: 400; color: #2C2A26; margin: 0 0 0.25rem; letter-spacing: -0.01em;">Project Update</h1>
        <p style="font-size: 13px; color: #9A8F82; margin: 0 0 1.75rem; font-family: Arial, sans-serif; letter-spacing: 0.04em;">Kimball Residence &nbsp;·&nbsp; April 27, 2026</p>

        <p style="font-size: 15px; line-height: 1.75; color: #4A4540; margin: 0 0 0.85rem;">Hi there,</p>
        
      </div>

      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Milestones</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="font-family: Arial, sans-serif; font-size: 11px; color: #7D9E6E;">&#10003;</span>
              <span style="font-size: 14px; color: #9A8F82; text-decoration: line-through;">Design intake</span>
            </div>
            <span style="font-size: 13px; color: #B8AFA4; font-family: Arial, sans-serif;">Feb 28</span>
          </div>
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="width: 7px; height: 7px; border-radius: 50%; background: #D4C9BC; display: inline-block; flex-shrink: 0;"></span>
              <span style="font-size: 14px; color: #2C2A26;">Construction kickoff</span>
            </div>
            <span style="font-size: 13px; color: #4A4540; font-family: Arial, sans-serif;">Apr 14</span>
          </div>
      </div>
      
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Procurement</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <table style="width: 100%; border-collapse: collapse; font-family: Arial, sans-serif;">
          <thead>
            <tr style="border-bottom: 0.5px solid #D9D3CA;">
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; width: 50%;">Item</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: center;">Status</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: right;">ETA</td>
            </tr>
          </thead>
          <tbody>
          <tr style="border-bottom: 0.5px solid #EDE8E2;">
            <td style="font-size: 13px; color: #2C2A26; padding: 0.65rem 0;">Sofa</td>
            <td style="font-size: 12px; color: #D4A574; text-align: center; padding: 0.65rem 0;">Ordered</td>
            <td style="font-size: 12px; color: #9A8F82; text-align: right; padding: 0.65rem 0;">Apr 30</td>
          </tr></tbody>
        </table>
      </div>
      

      <div style="padding: 0 2.5rem 2.5rem;">
        <p style="font-size: 15px; color: #2C2A26; margin: 0 0 0.2rem;">Elizabeth</p>
        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #9A8F82; margin: 0 0 1.75rem;">La Sprezzatura</p>

        <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 0.5px solid #EDE8E2;">
          <a href="https://lasprezz.com/portal/dashboard" style="display: inline-block; background: #8B6E5A; color: #FAF7F3; font-family: Arial, sans-serif; font-size: 11px; letter-spacing: 0.14em; text-transform: uppercase; text-decoration: none; padding: 0.85rem 2rem; border-radius: 2px;">Open Your Project Portal →</a>
        </div>

        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #6B6560; text-align: center; margin: 1.25rem 0 0; line-height: 1.6;">
          Questions or feedback? <a href="mailto:liz@lasprezz.com" style="color: #8B6E5A; text-decoration: underline;">Email Elizabeth</a>.
        </p>
      </div>

      <div style="padding: 1rem 2.5rem; border-top: 0.5px solid #EDE8E2; text-align: center;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0; letter-spacing: 0.06em;">La Sprezzatura · Darien, CT</p>
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0.5rem 0 0; letter-spacing: 0.06em;">Sent via Sprezza Hub</p>
      </div>

    </div>
  </div>
</body>
</html>"
`;

exports[`buildSendUpdateEmail (Phase 34 Plan 04) > snapshot: renders without milestones section (showMilestones: false) 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><title>Kimball Residence — Weekly Update</title></head>
<body style="margin:0;padding:0;background-color:#F5F1EB;">
  <div style="background: #F5F1EB; padding: 2rem 1rem;">
    <div style="max-width: 580px; margin: 0 auto; background: #FDFAF6; border: 0.5px solid #E8E2D9; border-radius: 4px; font-family: Georgia, 'Times New Roman', serif; color: #2C2A26;">

      <div style="padding: 2.5rem 2.5rem 0; text-align: center; border-bottom: 0.5px solid #E8E2D9; padding-bottom: 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.18em; color: #9A8F82; margin: 0 0 0.35rem; text-transform: uppercase;">La Sprezzatura</p>
      </div>

      <div style="padding: 2rem 2.5rem 0;">
        <h1 style="font-size: 22px; font-weight: 400; color: #2C2A26; margin: 0 0 0.25rem; letter-spacing: -0.01em;">Project Update</h1>
        <p style="font-size: 13px; color: #9A8F82; margin: 0 0 1.75rem; font-family: Arial, sans-serif; letter-spacing: 0.04em;">Kimball Residence &nbsp;·&nbsp; April 27, 2026</p>

        <p style="font-size: 15px; line-height: 1.75; color: #4A4540; margin: 0 0 0.85rem;">Hi there,</p>
        
      </div>

      
      
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Procurement</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <table style="width: 100%; border-collapse: collapse; font-family: Arial, sans-serif;">
          <thead>
            <tr style="border-bottom: 0.5px solid #D9D3CA;">
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; width: 50%;">Item</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: center;">Status</td>
              <td style="font-size: 10px; letter-spacing: 0.1em; color: #B8AFA4; text-transform: uppercase; padding: 0.6rem 0; text-align: right;">ETA</td>
            </tr>
          </thead>
          <tbody>
          <tr style="border-bottom: 0.5px solid #EDE8E2;">
            <td style="font-size: 13px; color: #2C2A26; padding: 0.65rem 0;">Sofa</td>
            <td style="font-size: 12px; color: #D4A574; text-align: center; padding: 0.65rem 0;">Ordered</td>
            <td style="font-size: 12px; color: #9A8F82; text-align: right; padding: 0.65rem 0;">Apr 30</td>
          </tr></tbody>
        </table>
      </div>
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Awaiting Your Review</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; font-size: 14px; color: #2C2A26;">&#9675; Proposal</div>
      </div>

      <div style="padding: 0 2.5rem 2.5rem;">
        <p style="font-size: 15px; color: #2C2A26; margin: 0 0 0.2rem;">Elizabeth</p>
        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #9A8F82; margin: 0 0 1.75rem;">La Sprezzatura</p>

        <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 0.5px solid #EDE8E2;">
          <a href="https://lasprezz.com/portal/dashboard" style="display: inline-block; background: #8B6E5A; color: #FAF7F3; font-family: Arial, sans-serif; font-size: 11px; letter-spacing: 0.14em; text-transform: uppercase; text-decoration: none; padding: 0.85rem 2rem; border-radius: 2px;">Open Your Project Portal →</a>
        </div>

        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #6B6560; text-align: center; margin: 1.25rem 0 0; line-height: 1.6;">
          Questions or feedback? <a href="mailto:liz@lasprezz.com" style="color: #8B6E5A; text-decoration: underline;">Email Elizabeth</a>.
        </p>
      </div>

      <div style="padding: 1rem 2.5rem; border-top: 0.5px solid #EDE8E2; text-align: center;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0; letter-spacing: 0.06em;">La Sprezzatura · Darien, CT</p>
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0.5rem 0 0; letter-spacing: 0.06em;">Sent via Sprezza Hub</p>
      </div>

    </div>
  </div>
</body>
</html>"
`;

exports[`buildSendUpdateEmail (Phase 34 Plan 04) > snapshot: renders without procurement section (showProcurement: false) 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><title>Kimball Residence — Weekly Update</title></head>
<body style="margin:0;padding:0;background-color:#F5F1EB;">
  <div style="background: #F5F1EB; padding: 2rem 1rem;">
    <div style="max-width: 580px; margin: 0 auto; background: #FDFAF6; border: 0.5px solid #E8E2D9; border-radius: 4px; font-family: Georgia, 'Times New Roman', serif; color: #2C2A26;">

      <div style="padding: 2.5rem 2.5rem 0; text-align: center; border-bottom: 0.5px solid #E8E2D9; padding-bottom: 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.18em; color: #9A8F82; margin: 0 0 0.35rem; text-transform: uppercase;">La Sprezzatura</p>
      </div>

      <div style="padding: 2rem 2.5rem 0;">
        <h1 style="font-size: 22px; font-weight: 400; color: #2C2A26; margin: 0 0 0.25rem; letter-spacing: -0.01em;">Project Update</h1>
        <p style="font-size: 13px; color: #9A8F82; margin: 0 0 1.75rem; font-family: Arial, sans-serif; letter-spacing: 0.04em;">Kimball Residence &nbsp;·&nbsp; April 27, 2026</p>

        <p style="font-size: 15px; line-height: 1.75; color: #4A4540; margin: 0 0 0.85rem;">Hi there,</p>
        
      </div>

      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Milestones</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="font-family: Arial, sans-serif; font-size: 11px; color: #7D9E6E;">&#10003;</span>
              <span style="font-size: 14px; color: #9A8F82; text-decoration: line-through;">Design intake</span>
            </div>
            <span style="font-size: 13px; color: #B8AFA4; font-family: Arial, sans-serif;">Feb 28</span>
          </div>
          <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; display: flex; justify-content: space-between; align-items: center;">
            <div style="display: flex; align-items: center; gap: 10px;">
              <span style="width: 7px; height: 7px; border-radius: 50%; background: #D4C9BC; display: inline-block; flex-shrink: 0;"></span>
              <span style="font-size: 14px; color: #2C2A26;">Construction kickoff</span>
            </div>
            <span style="font-size: 13px; color: #4A4540; font-family: Arial, sans-serif;">Apr 14</span>
          </div>
      </div>
      
      
      
      <div style="padding: 0 2.5rem 1.5rem;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; letter-spacing: 0.14em; color: #9A8F82; text-transform: uppercase; margin: 0 0 0.75rem;">Awaiting Your Review</p>
        <div style="border-top: 0.5px solid #D9D3CA;"></div>
        <div style="padding: 0.6rem 0; border-bottom: 0.5px solid #EDE8E2; font-size: 14px; color: #2C2A26;">&#9675; Proposal</div>
      </div>

      <div style="padding: 0 2.5rem 2.5rem;">
        <p style="font-size: 15px; color: #2C2A26; margin: 0 0 0.2rem;">Elizabeth</p>
        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #9A8F82; margin: 0 0 1.75rem;">La Sprezzatura</p>

        <div style="text-align: center; margin-top: 1.5rem; padding-top: 1.5rem; border-top: 0.5px solid #EDE8E2;">
          <a href="https://lasprezz.com/portal/dashboard" style="display: inline-block; background: #8B6E5A; color: #FAF7F3; font-family: Arial, sans-serif; font-size: 11px; letter-spacing: 0.14em; text-transform: uppercase; text-decoration: none; padding: 0.85rem 2rem; border-radius: 2px;">Open Your Project Portal →</a>
        </div>

        <p style="font-family: Arial, sans-serif; font-size: 12px; color: #6B6560; text-align: center; margin: 1.25rem 0 0; line-height: 1.6;">
          Questions or feedback? <a href="mailto:liz@lasprezz.com" style="color: #8B6E5A; text-decoration: underline;">Email Elizabeth</a>.
        </p>
      </div>

      <div style="padding: 1rem 2.5rem; border-top: 0.5px solid #EDE8E2; text-align: center;">
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0; letter-spacing: 0.06em;">La Sprezzatura · Darien, CT</p>
        <p style="font-family: Arial, sans-serif; font-size: 10px; color: #C5BDB4; margin: 0.5rem 0 0; letter-spacing: 0.06em;">Sent via Sprezza Hub</p>
      </div>

    </div>
  </div>
</body>
</html>"
`;
